--- a/Pages/upload.html
+++ b/Pages/upload.html
@@ -28,7 +28,7 @@
             style="display: none"
             onchange="previewImage()"
         />
-        <button class="button-style" onclick="uploadFile()">Send</button>
+        <button class="middle-button-style" onclick="uploadFile()">Send</button>
         <img id="previewImage" style="display: none; max-width: 300px" />
 
         <button class="button-style" onclick="signInWithMicrosoft()">
