--- a/Pages/Callback.html
+++ b/Pages/Callback.html
@@ -11,21 +11,13 @@
 
             // Exchange the authorization code for an access token
             fetch(
-                "https://login.microsoftonline.com/common/oauth2/v2.0/token",
+                "https://showcaseserver.azurewebsites.net/api/ExchangeTokenFunction",
                 {
                     method: "POST",
                     headers: {
-                        "Content-Type": "application/x-www-form-urlencoded",
+                        "Content-Type": "application/json",
                     },
-                    body: new URLSearchParams({
-                        client_id: "c91a3691-c800-4aed-9e85-1a2c896327de",
-                        scope: "openid offline_access Files.ReadWrite.All",
-                        code: code,
-                        redirect_uri:
-                            "http://localhost:5500/Pages/Callback.html",
-                        grant_type: "authorization_code",
-                        client_secret: "ddba6e4e-62b1-4a13-b165-08b00ef6723f",
-                    }),
+                    body: JSON.stringify({ code: code }),
                 }
             )
                 .then((response) => response.json())
