--- a/Pages/showcase.html
+++ b/Pages/showcase.html
@@ -28,8 +28,16 @@
     <body>
         <!--Navigation Bar-->
         <div id="navbar"></div>
-        <h1></h1>
-        <h1>Shuffled Photos and Videos</h1>
+        <div class="Title-Container">
+            <h1 class="page-title" style="width: 100%; text-align: center">
+                Shuffled Photos and Videos
+            </h1>
+            <img
+                src="/Resources/Icons/team-icon.png"
+                id="TeamIcon"
+                alt="Team Icon"
+            />
+        </div>
         <div id="mediaContainer"></div>
 
         <script src="/Pages/showcase.js"></script>
