--- a/Pages/upload.html
+++ b/Pages/upload.html
@@ -1,187 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link
-            rel="icon"
-            type="image/x-icon"
-            href="/Resources/Favicons/favicon.png"
-        />
-        <link rel="stylesheet" href="/Pages/style.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script>
-            window.addEventListener("message", function (event) {
-                if (event.origin !== "http://localhost:5500") {
-                    return;
-                }
-                const { accessToken } = event.data;
-                if (accessToken) {
-                    // Store access token in local storage
-                    localStorage.setItem("accessToken", accessToken);
-                    updateAccessTokenDisplay();
-                }
-            });
+<head>
+    <script src="https://apis.google.com/js/api.js"></script>
+    <link rel="icon" type="image/x-icon" href="/Resources/Favicons/favicon.png"/>
+    <link rel="stylesheet" href="/Pages/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <div id="navbar"></div>
+    <div class="Title-Container">
+        <h1 class="page-title" style="width: 100%; text-align: center">Upload Photos</h1>
+        <img src="/Resources/Icons/team-icon.png" id="TeamIcon" alt="Team Icon"/>
+    </div>
 
-            // Function to update the access token display
-            function updateAccessTokenDisplay() {
-                // Retrieve access token from local storage
-                const accessToken = localStorage.getItem("accessToken");
-                // Update the access token display
-                document.getElementById("accessTokenDisplay").innerText =
-                    accessToken || "Access token is not set.";
-            }
-
-            // Function to handle sign-in with Microsoft
-            function signInWithGoogle() {
-                window.open(
-                    "https://accounts.google.com/o/oauth2/v2/auth?" +
-                        "client_id=460702587834-648e1i2dmfu35i7ip1p5qa10mkcmastg.apps.googleusercontent.com" + // Replace with your client ID
-                        "&response_type=code" +
-                        "&redirect_uri=http://localhost:5500/Pages/callback.html" + // Replace with your redirect URI
-                        "&scope=https://www.googleapis.com/auth/drive",
-                    "_blank"
-                );
-            }
-
-            // Function to handle logout
-            function logout() {
-                // Clear access token from local storage
-                localStorage.removeItem("accessToken");
-                // Reload the page
-                location.reload();
-            }
-
-            // Function to upload file
-            async function uploadFile() {
-                const fileInput = document.getElementById("fileInput");
-                const file = fileInput.files[0];
-                if (file) {
-                    const formData = new FormData();
-                    formData.append("file", file);
-
-                    try {
-                        // Exchange authorization code for access token
-                        const tokenResponse = await fetch(
-                            "https://us-central1-showcase-function.cloudfunctions.net/ExchangeTokenFunction",
-                            {
-                                method: "POST",
-                                headers: {
-                                    "Content-Type": "application/json",
-                                },
-                                body: JSON.stringify({
-                                    code: "AUTHORIZATION_CODE",
-                                }), // Replace AUTHORIZATION_CODE with the actual authorization code
-                            }
-                        );
-
-                        const tokenData = await tokenResponse.json();
-                        const accessToken = tokenData.access_token;
-
-                        // Use the access token to upload the file to Google Drive
-                        const uploadResponse = await fetch(
-                            "https://www.googleapis.com/upload/drive/v3/files?uploadType=media",
-                            {
-                                method: "POST",
-                                headers: {
-                                    Authorization: "Bearer " + accessToken,
-                                },
-                                body: file,
-                            }
-                        );
-
-                        if (uploadResponse.ok) {
-                            alert("File uploaded successfully!");
-                        } else {
-                            alert("Error uploading file!");
-                        }
-                    } catch (error) {
-                        console.error("Error:", error);
-                        alert("Error uploading file!");
-                    }
-                } else {
-                    alert("Please select a file to upload.");
-                }
-            }
-
-            // Function to preview the selected image
-            function previewImage() {
-                const fileInput = document.getElementById("fileInput");
-                const file = fileInput.files[0];
-                if (file) {
-                    const reader = new FileReader();
-                    reader.onload = function (e) {
-                        document.getElementById("previewImage").src =
-                            e.target.result;
-                        document.getElementById("previewImage").style.display =
-                            "block";
-                    };
-                    reader.readAsDataURL(file);
-                }
-            }
-
-            window.addEventListener("DOMContentLoaded", (event) => {
-                fetch("/Pages/navbar.html")
-                    .then((response) => response.text())
-                    .then((data) => {
-                        document.getElementById("navbar").innerHTML = data;
-                    });
-                fetch("/Pages/socials.html")
-                    .then((response) => response.text())
-                    .then((data) => {
-                        document.getElementById("socials").innerHTML = data;
-                    });
-
-                // Update access token display
-                updateAccessTokenDisplay();
-
-                // Listen for changes in local storage (e.g., when access token is updated)
-                window.addEventListener("storage", function (event) {
-                    if (event.key === "accessToken") {
-                        updateAccessTokenDisplay();
-                    }
-                });
-            });
-        </script>
-    </head>
-    <body>
-        <!--Navigation Bar-->
-        <div id="navbar"></div>
-        <div class="Title-Container">
-            <h1 class="page-title" style="width: 100%; text-align: center">
-                Upload Photos
-            </h1>
-            <img
-                src="/Resources/Icons/team-icon.png"
-                id="TeamIcon"
-                alt="Team Icon"
-            />
-        </div>
-
-        <button
-            class="button-style"
-            onclick="document.getElementById('fileInput').click()"
-        >
+    <form id="uploadForm">
+        <button class="button-style" onclick="document.getElementById('fileInput').click()" type="button">
             Choose File to Upload
         </button>
-        <input
-            type="file"
-            id="fileInput"
-            accept="image/*"
-            style="display: none"
-        />
-        <button class="middle-button-style" onclick="uploadFile()">Send</button>
+        <input type="file" id="fileInput" accept="image/*" style="display: none"/>
+        <button class="middle-button-style" type="submit">Send</button>
+    </form>
 
-        <button class="button-style" onclick="signInWithGoogle()">
-            Click here to sign in with Google
-        </button>
+    <div id="fileNameDisplay"></div>
+    <img id="filePreview" style="max-width: 100%; display: block; margin-top: 10px;"/>
 
-        <!-- Logout button -->
-        <button class="button-style" onclick="logout()">Log out</button>
+    <button class="button-style" onclick="signInWithGoogle()">Click here to sign in with Google</button>
+    <button class="button-style" onclick="logout()">Log out</button>
 
-        <!-- Access Token Display -->
-        <h1>Access Token:</h1>
-        <div id="accessTokenDisplay"></div>
+    <!-- Access Token Display -->
+    <h1>Access Token:</h1>
+    <div id="accessTokenDisplay"></div>
 
-        <!-- Footer -->
-        <div id="socials"></div>
-    </body>
+    <!-- Footer -->
+    <div id="socials"></div>
+</body>
 </html>
