Off season leaders + 25-26 board

--- a/index.html
+++ b/index.html
@@ -163,19 +163,19 @@
                         <section id="officers">
                             <ul class="leaders-list">
                                 <li>
-                                    <div>Michael</div>
+                                    <div>Michael M</div>
                                     <span> President </span>
                                 </li>
                                 <li>
-                                    <div>Bridget</div>
+                                    <div>Bridget R</div>
                                     <span> Vice President </span>
                                 </li>
                                 <li>
-                                    <div>End</div>
+                                    <div>End C</div>
                                     <span> Treasurer </span>
                                 </li>
                                 <li>
-                                    <div>Kaylynn</div>
+                                    <div>Kaylynn D</div>
                                     <span> Secretary </span>
                                 </li>
                             </ul>
@@ -185,44 +185,36 @@
                         <section id="captains">
                             <ul class="leaders-list">
                                 <li>
-                                    <div>Alexander</div>
-                                    <span> Captain of Build </span>
+                                    <div>Anthony H</div>
+                                    <span> Captain of Build/Electrical </span>
                                 </li>
                                 <li>
-                                    <div>Michael</div>
-                                    <span> Captain of Design </span>
+                                    <div>Michael Y</div>
+                                    <span> Captain of Design/CAD </span>
                                 </li>
                                 <li>
-                                    <div>Andrew</div>
-                                    <span> Captain of CAD </span>
+                                    <div>Andrew M</div>
+                                    <span> Captain of Design/CAD </span>
                                 </li>
-                                <li>
-                                    <div>Anthony</div>
+                                <!-- <li>
+                                    <div>Anthony H</div>
                                     <span> Captain of Electrical </span>
+                                </li> -->
+                                <li>
+                                    <div>Bridget R</div>
+                                    <span> Captain of Media/Outreach </span>
                                 </li>
                                 <li>
-                                    <div>Bridget</div>
-                                    <span> Captain of Media </span>
-                                </li>
-                                <li>
-                                    <div>Ashton</div>
+                                    <div>Ashton A</div>
                                     <span> Captain of Programming </span>
                                 </li>
                                 <li>
-                                    <div>End</div>
+                                    <div>End C</div>
                                     <span> Captain of Safety </span>
                                 </li>
                                 <li>
-                                    <div>Kaylynn</div>
-                                    <span> Captain of Organization </span>
-                                </li>
-                                <li>
-                                    <div>Nic</div>
+                                    <div></div>
                                     <span> Captain of Scouting </span>
-                                </li>
-                                <li>
-                                    <div>Aneesa</div>
-                                    <span> Captain of The Arts </span>
                                 </li>
                             </ul>
                         </section>
